fixing show table on mobile view

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -7,6 +7,10 @@ h1#signup {
 	color: blue;
 }
 
+.table {
+	text-align: center;
+}
+
 .container {
 	background-color: #FFA100;
 }
@@ -17,7 +21,7 @@ form {
 }
 
 input, select {
-	
+
 }
 
 #logo {
